@@ -1319,6 +1319,37 @@ expr_stmt|;
 block|}
 annotation|@
 name|Override
+DECL|method|writeBool
+specifier|public
+name|void
+name|writeBool
+parameter_list|(
+name|String
+name|name
+parameter_list|,
+name|String
+name|val
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|writeBool
+argument_list|(
+name|name
+argument_list|,
+name|val
+operator|.
+name|charAt
+argument_list|(
+literal|0
+argument_list|)
+operator|==
+literal|'t'
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
 DECL|method|writeInt
 specifier|public
 name|void
