@@ -233,6 +233,92 @@ literal|"{'data1'=>(0.0/0.0),'data2'=>-(1.0/0.0),'data3'=>(1.0/0.0)}"
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testPHPS
+specifier|public
+name|void
+name|testPHPS
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|SolrQueryRequest
+name|req
+init|=
+name|req
+argument_list|(
+literal|"dummy"
+argument_list|)
+decl_stmt|;
+name|SolrQueryResponse
+name|rsp
+init|=
+operator|new
+name|SolrQueryResponse
+argument_list|()
+decl_stmt|;
+name|QueryResponseWriter
+name|w
+init|=
+operator|new
+name|PHPSerializedResponseWriter
+argument_list|()
+decl_stmt|;
+name|StringWriter
+name|buf
+init|=
+operator|new
+name|StringWriter
+argument_list|()
+decl_stmt|;
+name|rsp
+operator|.
+name|add
+argument_list|(
+literal|"data1"
+argument_list|,
+literal|"hello"
+argument_list|)
+expr_stmt|;
+name|rsp
+operator|.
+name|add
+argument_list|(
+literal|"data2"
+argument_list|,
+literal|42
+argument_list|)
+expr_stmt|;
+name|rsp
+operator|.
+name|add
+argument_list|(
+literal|"data3"
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|write
+argument_list|(
+name|buf
+argument_list|,
+name|req
+argument_list|,
+name|rsp
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|buf
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+literal|"a:3:{s:5:\"data1\";s:5:\"hello\";s:5:\"data2\";i:42;s:5:\"data3\";b:1;}"
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
